Resolved more git issues

--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -4,11 +4,8 @@
 		busy="{detailView>/busy}" busyIndicatorDelay="{detailView>/delay}">
 		<semantic:content>
 			<Table id="folderContentTable" width="auto" items="{path: 'contentModel>/SelectedFolder/Children'}" updateFinished="onTableUpdateFinished"
-<<<<<<< Upstream, based on 593767ec33ee7437c36d7bee797bb302abda15a5
-				noDataText="{i18n>detailFolderContentTableNoDataText}" busyIndicatorDelay="{detailView>/lineItemTableDelay}" class="sapUiResponsiveMargin">
-=======
-				noDataText="{i18n>detailFolderContentTableNoDataText}" busyIndicatorDelay="{detailView>/lineItemTableDelay}" class="sapUiResponsiveMargin" itemPress="onItemPressed">
->>>>>>> 7d5cddd Implemented deleting functionality 
+				noDataText="{i18n>detailFolderContentTableNoDataText}" busyIndicatorDelay="{detailView>/lineItemTableDelay}" class="sapUiResponsiveMargin"
+				itemPress="onItemPressed">
 				<headerToolbar>
 					<Toolbar id="lineItemsToolbar">
 						<Breadcrumbs links="{path: 'contentModel>/SelectedFolder/Parents'}" currentLocationText="{contentModel>/SelectedFolder/Name}">
@@ -39,11 +36,7 @@
 				<items>
 					<ColumnListItem type="Active">
 						<cells>
-<<<<<<< Upstream, based on 593767ec33ee7437c36d7bee797bb302abda15a5
-							<core:Icon src="sap-icon://folder-blank" decorative="true"/>
-=======
 							<core:Icon src="sap-icon://{=${contentModel>Type}==='Folder' ? 'folder-blank' : 'document'}" decorative="true"/>
->>>>>>> 7d5cddd Implemented deleting functionality 
 							<ObjectIdentifier title="{contentModel>Name}" text="{ApplicationId}"/>
 							<Text text="{contentModel>Type}"/>
 							<Text text="{contentModel>Filesize}"/>
