Changed URLs to access backend so that you can set the context-root in the component.js, which is then used by all the backend requests

--- a/webapp/view/Detail.view.xml
+++ b/webapp/view/Detail.view.xml
@@ -41,6 +41,7 @@
 							<Text text="{path: 'contentModel>Filesize', formatter: '.formatter.formatFilesize'}"/>
 							<HBox>
 								<Button class="transparentButton" icon="sap-icon://delete" press="onDeletePressed"/>
+								<Button class="transparentButton" icon="sap-icon://edit" press="onEditPressed"/>
 							</HBox>
 						</cells>
 					</ColumnListItem>
